<resources>
    <string name="app_name">Feelings</string>
    <string name="text_message">How are you feeling?</string>
    <string name="mood_button">Mood</string>
    <string name="feeling"></string>
    <string-array name="moods">
        <item>happy</item>
        <item>gloomy</item>
        <item>creepy</item>
        <item>depressed</item>
        <item>confused</item>
        <item>sad</item>
        <item>delighted</item>
    </string-array>

    <string name="yoga_text">Yoga</string>
    <string name="yoga1_radio">Music</string>
    <string name="yoga2_radio">Sports</string>
    <string name="yoga3_radio">Reading</string>

    <string name="enlgihted_check">enlightened</string>
    <string name="conservative_check">conservative</string>
    <string name="sarcastic_check">sarcastic</string>
    <string name="secretive_check">secretive</string>

    <string name="meditate_switch">Meditate</string>
    <string name="mood_img">MoodImg</string>
</resources>
