<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#FFFF66"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true">

        <TextView android:text="@string/text_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="#000000"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"></LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enlgihted_check"
                android:id="@+id/checkBox1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conservative_check"
                android:id="@+id/checkBox2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sarcastic_check"
                android:id="@+id/checkBox3" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/secretive_check"
                android:id="@+id/checkBox4" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Spinner
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:entries="@array/moods"
                android:layout_below="@+id/textView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meditate_switch"
                    android:id="@+id/switch1" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/yoga_type"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <RadioButton
                        android:layout_width="99dp"
                        android:layout_height="wrap_content"
                        android:text="@string/yoga1_radio"
                        android:id="@+id/radioButton1" />

                    <RadioButton
                        android:layout_width="119dp"
                        android:layout_height="wrap_content"
                        android:text="@string/yoga2_radio"
                        android:id="@+id/radioButton2" />

                    <RadioButton
                        android:layout_width="102dp"
                        android:layout_height="wrap_content"
                        android:text="@string/yoga3_radio"
                        android:id="@+id/radioButton3" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mood_button"
            android:id="@+id/button"
            android:onClick="findMood"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="65dp"
            android:layout_gravity="center_horizontal" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageView"
            android:layout_below="@+id/button"
            android:text="@string/mood_img"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/feeling"
            android:id="@+id/feelingText"
            android:layout_below="@+id/button"
            android:layout_centerHorizontal="true" />

    </LinearLayout>

</RelativeLayout>
